Prevent search results from wrapping across to multiple rows

--- a/src/renderer/components/ft-input/ft-input.css
+++ b/src/renderer/components/ft-input/ft-input.css
@@ -203,6 +203,9 @@
   padding-block: 0;
   line-height: 2rem;
   padding-inline: 15px;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  white-space: nowrap;
 }
 
 .bookmarkStarIcon {
